--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,5 @@
 etcd.url="http://10.232.251.38:2379"
+millis-between-connection-retries=100;
+wait-for-connect=100;
+max-number-of-connection-retries=5
+wait-for-socket-publishing=100
